# donations-project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
apps/campaigns/: admin.py  models.py  serializers.py  urls.py  views.py
apps/campaigns/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0003_remove_communitydevelopment_project_name_and_more.py
apps/contact_analytics/: models.py  urls.py  views.py
apps/contact_analytics/migrations/: 0001_initial.py  0002_initial.py  0002_rename_given_name_accountprofile_first_name.py  0003_rename_first_name_accountprofile_given_name.py
apps/donor_management/: models.py
apps/donor_management/migrations/: 0001_initial.py
apps/mosaico/: views.py
apps/mosaico/migrations/: 0001_initial.py
apps/scheduler/: models.py  views.py
apps/scheduler/migrations/: 0001_initial.py  0002_initial.py
apps/users/: admin.py  forms.py  managers.py  models.py  profiles.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_institution_contact_person_email_and_more.py  0002_alter_user_roles.py  0002_remove_user_first_name_remove_user_last_name.py  0002_user_user_role.py  (+6 more)
config/: settings.py
docker/: Dockerfile  entrypoint.sh
donation-widget/: Dockerfile
frontend/: .gitignore  Dockerfile  dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: apiClient.js
src/: apiClient.js
src/app/: layout.js  page.js
staticfiles/: staticfiles.json
utils/: beneficiary_registry.py
(+150 files in other folders)
