[tool.poetry]
name = "donations-project"
version = "0.1.0"
description = ""
authors = ["rainer bielert <bielertwreiner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-environ = "^0.11.2"
django = "^5.1"
djangorestframework = "^3.15.2"
django-phonenumber-field = "^8.0.0"
djangorestframework-simplejwt = "^5.3.1"
phonenumbers = "^8.13.43"
django-scheduler = "^0.10.1"
requests = "^2.32.3"
sorl-thumbnail = "^12.10.0"
jsonfield = "^3.1.0"
pillow = "^10.4.0"
premailer = "^3.10.0"
jsonify = "^0.5"
django-cors-headers = "^4.4.0"
django-countries = "^7.6.1"
python-magic = "^0.4.27"
djoser = "^2.2.3"
celery = "^5.4.0"
flower = "^2.0.1"
redis = "^5.0.8"
django-celery-email = "^3.0.0"
watchdog = "^4.0.2"
mysql-connector-python = "^9.0.0"
mysqlclient = "^2.2.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
